recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:4: error: type mismatch;
 found   : Int
 required: scala.collection.GenTraversableOnce[?]
  return reverse(l.tail)++l.head::Nil
                            ^